Modified allowable flow transaction states